<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="221dp"
            android:layout_height="194dp"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="277dp"
            android:layout_height="48dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingHorizontal="10dp"
            android:drawablePadding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="277dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_contra"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"
            android:drawablePadding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnAcceder"
            android:layout_width="208dp"
            android:layout_height="51dp"
            android:layout_marginTop="48dp"
            android:backgroundTint="#BA0D00"
            android:text="@string/btnacceder"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="----------------- O -----------------"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAcceder" />

        <Button
            android:id="@+id/btnCrearCuenta"
            android:layout_width="208dp"
            android:layout_height="51dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/crear_cuenta"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
